style: update responsive

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <footer>
         <div class="containerFooter">
           <div class="author">
-            <p>Desenvolvido por Arlen Possamai | 2023</p>
+            <p>Desenvolvido por Arlen Possamai | 2023 |</p>
           </div>
           <div>
             <ul class="social">
